--- a/src/pyproject.toml
+++ b/src/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "langchain-ollama>=0.3.8",
     "langchain-text-splitters>=0.3.11",
     "langgraph>=0.6.7",
+    "pdfplumber>=0.11.7",
     "pymupdf>=1.26.4",
+    "pymupdf4llm>=0.0.27",
     "typing-extensions>=4.15.0",
 ]
